# referral-engine

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  README.ru.md  SECURITY.md  config.example.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: python-tests.yml  tests.yml
api/: deps.py  main.py  state.py
api/core/: config.py
api/v1/: distributions.py  referrals.py  router.py  users.py
examples/: quickstart.py
migrations/: 001_schema.sql
referral_engine/: __init__.py  analytics.py  batch.py  config.py  distributor.py  engine.py  exceptions.py  hooks.py  models.py  tree.py
referral_engine/adapters/: __init__.py  base.py  memory.py  postgres.py
tests/: test_distributor.py  test_extensions.py
